# storage/api-docs/api-docs.json
@@ -386,6 +386,58 @@
                 ]
             }
         },
+        "/api/v1/cirugia/get/scheduled-procedures-by-document/{patientdoc?}/{patientdoctype?}": {
+            "get": {
+                "tags": [
+                    "Cirugia"
+                ],
+                "summary": "Get ScheduledProceduresByDocument",
+                "description": "Returns ScheduledProceduresByDocumento",
+                "operationId": "getScheduledProceduresByDocument",
+                "parameters": [
+                    {
+                        "name": "patientdoc?",
+                        "in": "path",
+                        "description": "Número de Documento - Opcional",
+                        "required": false,
+                        "schema": {
+                            "type": "date"
+                        }
+                    },
+                    {
+                        "name": "patientdoctype?",
+                        "in": "path",
+                        "description": "Tipo de Documento - Opcional - RC - TI - CC - CE - NIT - MS - PA - PE - AS",
+                        "required": false,
+                        "schema": {
+                            "type": "date"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "type": "apikey",
+                        "in": "header",
+                        "name": "X-Authorization",
+                        "X-Authorization": []
+                    }
+                ]
+            }
+        },
         "/api/v1/coco/patient/{patientdoc}/type/{patientdoctype}/information": {
             "get": {
                 "tags": [
@@ -1546,7 +1598,7 @@
                 ]
             }
         },
-        "/api/v1/hygea/get/purchase-orders/{init?}{end?}": {
+        "/api/v1/hygea/get/purchase-orders/{init?}/{end?}": {
             "get": {
                 "tags": [
                     "Hygea"
@@ -1934,6 +1986,119 @@
                 "summary": "Get Active Mixing Center Database",
                 "description": "Returns Active Mixing Center Database",
                 "operationId": "ActMixingCenterUsers",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "type": "apikey",
+                        "in": "header",
+                        "name": "X-Authorization",
+                        "X-Authorization": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/hygea/get/suggested-pending/{init?}/{end?}": {
+            "get": {
+                "tags": [
+                    "Hygea"
+                ],
+                "summary": "Get Pending",
+                "description": "Returns Pending",
+                "operationId": "getSuggestedPending",
+                "parameters": [
+                    {
+                        "name": "init?",
+                        "in": "path",
+                        "description": "Initial Date For Search - Optional",
+                        "required": false,
+                        "schema": {
+                            "type": "date"
+                        }
+                    },
+                    {
+                        "name": "end?",
+                        "in": "path",
+                        "description": "End Date For Search - Optional",
+                        "required": false,
+                        "schema": {
+                            "type": "date"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "type": "apikey",
+                        "in": "header",
+                        "name": "X-Authorization",
+                        "X-Authorization": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/hygea/get/purchase-invoices/{sumcod?}/{month?}/{year?}": {
+            "get": {
+                "tags": [
+                    "Hygea"
+                ],
+                "summary": "Get Purchase Invoices Details",
+                "description": "Returns Purchase Invoices Details",
+                "operationId": "getPurchaseInvoicesDetails",
+                "parameters": [
+                    {
+                        "name": "sumcod?",
+                        "in": "path",
+                        "description": "Product Code",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "month?",
+                        "in": "path",
+                        "description": "Month",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "year?",
+                        "in": "path",
+                        "description": "Year",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation"
